k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flexforgeapp
  namespace: flexforge-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flexforgeapp
  template:
    metadata:
      labels:
        app: flexforgeapp
    spec:
      containers:
        - name: flexforgeapp
          image: ristekimov/cicdapp-project:latest  # Updated to Docker Hub
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
