k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flexforgeapp-service
  namespace: flexforge-ns
spec:
  type: LoadBalancer  # Ensure this is set
  selector:
    app: flexforgeapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
