k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flexforge-app-ingress
  namespace: flexforge_ns
spec:
  rules:
    - host: flexforge.github.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flexforge-app-service
                port:
                  number: 80
